# PSI

./: .gitignore  .travis.yml  Dockerfile-django  Dockerfile-r-service  Dockerfile-transformer  Dockerfile-web  README.md  docker-compose-from-hub.yml  docker-compose.yml  fabfile.py  initializedb.sh  manage.py  xdocker-compose-from-hub.yml
OLD_CODE/data/: SingletonCookie  SingletonSocket  pumsmeta.xml  (+1 more)
R/: config.R  runner.py  setup.R
data/: .~lock.California Demographic Dataset.csv#  Census_PUMS5_California_Subsample-ddi.xml  Local State  README.md  Safe Browsing Channel IDs  Safe Browsing Cookies  SingletonLock  metadata-pums-original.json  metadata-pums.json  preprocess_4_v1-0.json  pumsmetaui.xml  simulatedcensus17.xml
frontend/: .babelrc.js  .gitignore  README.md  babel.config.js  package-lock.json  package.json  vue.config.js  webpack-stats.json  webpack.config.js
psiproject/: settings.py  urls.py  wsgi.py  wsgi_psi_azure.py  wsgi_psi_gce.py
requirements/: R-service.txt  base.txt  dev.txt
rook/: ins.RData  metadata.xml  rookPrivate.R  rookReport.R  rookReportTemplate.Rmd  rookSetup.R  rookTransform.R  rook_nonstop.R  rookconfig.R  rookrestart.R  xmlutility.R
startup_script/: dev_ubuntu_run.sh  psi_start.sh  psi_start_azure.sh
templates/: application.html  base.html  datasets.html  interactiveInterface.html  interface.html  login.html  psiIntroduction.html  psiOpen.html  psiOpenPrototype.html
transformer/: .gitignore  MIT-LICENSE  README.md  install.sh  stack.yaml  transformer.cabal
transformer/app/: Main.hs
transformer/src/: Eval.hs  Parse.hs
(+568 files in other folders)
